# hIIro

./: .gitignore  README.md  agent.py  config.py  main.py  pyproject.toml  stt.py  system_prompt.txt  tts.py
config/: .env.example  triggers.txt
server/: __init__.py  hub.py  protocol.py  ws.py
skills/: __init__.py
skills/core/: __init__.py  device.py  dnd.py  scheduler.py  speedtest.py
skills/search/: __init__.py
skills/smarthome/: __init__.py  start_zigbee2mqtt.sh
skills/spotify/: __init__.py
skills/stocks/: __init__.py
skills/time_tools/: __init__.py
skills/weather/: __init__.py
static/: app.js  index.html  style.css
